# SphereSandbox

./: .gitignore  CMakeLists.txt  LICENSE  NothingGL.sln  README.md
NothingGL/: NothingGL.vcxproj  NothingGL.vcxproj.filters
NothingGL/Shaders/PBR/: fragment.glsl  vertex.glsl
NothingGL/Source/: main.cpp
NothingGL/Source/Engine/: Engine.cpp  Engine.h
NothingGL/Source/Engine/Actors/: Actor.cpp  Actor.h  PhysicalActor.cpp  PhysicalActor.h
NothingGL/Source/Engine/Actors/Components/: CollisionComponent.cpp  CollisionComponent.h  ModelComponent.cpp  ModelComponent.h
NothingGL/Source/Engine/Physics/: Physics.cpp  Physics.h  Shapes.h
NothingGL/Source/Engine/Render/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  VertexArray.cpp  VertexArray.h  Vertexbuffer.h
NothingGL/Source/Engine/Render/Shaders/: fragment.glsl
SussyPlatformer/: NothingGL.vcxproj
SussyPlatformer/Source/Engine/: Engine.h
SussyPlatformer/Source/Engine/Actors/Components/: ModelComponent.cpp
SussyPlatformer/Source/Engine/Render/: Camera.cpp  Camera.h  Indexbuffer.cpp  Indexbuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Texture.cpp  UniformBuffer.h  VertexArray.h  Vertexbuffer.cpp
SussyPlatformer/Source/Engine/Render/Shaders/: vertex.glsl
lib/GLEW/: glew.pc.in
lib/GLEW/include/GL/: glew.h
lib/GLFW/: CMakeLists.txt
lib/assimp/: CMakeLists.txt
lib/assimp/code/: CMakeLists.txt
resources/Models/Cube/: Cube.fbx
resources/Models/Ground/: Landscape.fbx
resources/Models/Sphere/: Sphere.fbx
resources/Models/test/: Icosphere.fbx
resources/Shaders/PBR/: fragment.glsl  vertex.glsl
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h
src/Engine/Actors/: Actor.cpp  Actor.h  Controller.cpp  Controller.h  LightActor.cpp  LightActor.h  PhysicalActor.cpp  PhysicalActor.h
src/Engine/Actors/Components/: CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  ModelComponent.cpp  ModelComponent.h
src/Engine/Physics/: Physics.cpp  Physics.h
src/Engine/Render/: Camera.cpp  Camera.h  Indexbuffer.cpp  Indexbuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Vertexbuffer.cpp  Vertexbuffer.h
